--- a/mainPage.html
+++ b/mainPage.html
@@ -7,9 +7,11 @@
   </head>
   
   <body>
-    
-  
-   
+    <div class="button_container" id="toggle">
+  <span class="top"></span>
+  <span class="middle"></span>
+  <span class="bottom"></span>
+</div>
     <strong><h1><em>200 days project</em></h1></strong>
    
     <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
