--- a/mainPage.html
+++ b/mainPage.html
@@ -4,6 +4,8 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   
   <body>
@@ -12,14 +14,7 @@
   <span class="middle"></span>
   <span class="bottom"></span>
 </div>
-<a href="http://jquery.com/">jQuery</a>
-    <script src="jquery.js"></script>
-    <script>
- $(".button_container").click(function() {
-    $(this).toggleClass("active");
-    $(".menu").toggleClass("show");
-});
-    </script>
+
     <strong><h1><em>200 days project</em></h1></strong>
    
     <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
