--- a/mainPage.html
+++ b/mainPage.html
@@ -4,6 +4,7 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+     <link type="text/js" rel="jQuery" href="jQuery.js"/>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
