--- a/mainPage.html
+++ b/mainPage.html
@@ -13,6 +13,9 @@
   <span class="middle"></span>
   <span class="bottom"></span>
 </div>
+<script type="text/javascript" src="test.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
     <strong><h1><em>200 days project</em></h1></strong>
    
