--- a/mainPage.html
+++ b/mainPage.html
@@ -4,18 +4,18 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <script type="text/javascript" src="pages/js/indexanalytics.js"></script>
     </head>
-  
+    
   <body>
     <div class="button_container" id="toggle">
   <span class="top"></span>
   <span class="middle"></span>
   <span class="bottom"></span>
 </div>
-<script type="text/javascript" src="test.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
 
     <strong><h1><em>200 days project</em></h1></strong>
    
