--- a/mainPage.html
+++ b/mainPage.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script type="text/javascript" src="jQuery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     </head>
     
   <body>
