--- a/mainPage.html
+++ b/mainPage.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <script type="text/javascript" src="pages/js/animation.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+   
     </head>
     
   <body>
@@ -28,5 +28,6 @@
      
     </ul>
   </body>
+  <script type="text/javascript" src="pages/js/animation.js"></script>
 </html>
  
