--- a/mainPage.html
+++ b/mainPage.html
@@ -4,8 +4,9 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-    <script type="text/javascript" src="pages/js/animation.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+    <script type="text/javascript" src="pages/js/indexanalytics.js"></script>
    
     </head>
     
