--- a/mainPage.html
+++ b/mainPage.html
@@ -4,6 +4,7 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    <link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script type="text/javascript" src="pages/js/indexanalytics.js"></script>
