--- a/mainPage.html
+++ b/mainPage.html
@@ -10,11 +10,8 @@
     </head>
     
   <body>
-   
-
-
-
-    <strong><h1><em>200 days project</em></h1></strong>
+   <a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a>
+   <strong><h1><em>200 days project</em></h1></strong>
    
     <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
    
