--- a/mainPage.html
+++ b/mainPage.html
@@ -11,7 +11,7 @@
     
   <body>
    <div>
-     <a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a>
+     <a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a>
    </div>
    
    <strong><h1><em>200 days project</em></h1></strong>
