--- a/mainPage.html
+++ b/mainPage.html
@@ -12,6 +12,7 @@
   <body>
    <div>
      <a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a>
+     <a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a>
    </div>
    
    <strong><h1><em>200 days project</em></h1></strong>
