--- a/mainPage.html
+++ b/mainPage.html
@@ -10,16 +10,14 @@
     </head>
     
   <body>
+   <table border="1px">
    <tr>
    <div>
      <a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a>
+     <a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a>
    </div>
    </tr>
-   <tr>
-   <div>
-      <a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a>
-   </div>
-   </tr>
+   </table>
    
    <strong><h1><em>200 days project</em></h1></strong>
    
