--- a/mainPage.html
+++ b/mainPage.html
@@ -13,8 +13,8 @@
    <table border="1px">
    <tr>
    <div>
-     <td><a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a></td>
-     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td>
+     <a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a>
+     <a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a>
    </div>
    </tr>
    </table>
