--- a/mainPage.html
+++ b/mainPage.html
@@ -11,13 +11,11 @@
     
   <body>
    <table border="1px">
-   <tr>
-   <div>
-     <a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a>
-     <a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a>
-   </div>
-   </tr>
-   </table>
+    <tr>
+     <td><a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a></td>
+     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td>     
+  </tr>
+ </table>
    
    <strong><h1><em>200 days project</em></h1></strong>
    
