--- a/mainPage.html
+++ b/mainPage.html
@@ -10,10 +10,10 @@
     </head>
     
   <body>
-   <table border="1px">
+   <table border="0.5px">
     <tr>
-     <td><a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a></td>
-     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td>     
+     <center><td><a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a></td>
+     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>     
   </tr>
  </table>
    
