--- a/mainPage.html
+++ b/mainPage.html
@@ -12,7 +12,7 @@
   <body>
    <table border="10px">
     <tr>
-     <center><td><a href="http://ak-basketball.github.io/Resources/mainPage.html">Resources</a></td>
+     <center><td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
      <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>     
   </tr>
  </table>
