--- a/mainPage.html
+++ b/mainPage.html
@@ -24,7 +24,7 @@
    
     <em><h3>Starting from March 1, I will begin my project and make a website every day for 200 days</h3></em>
      <ul>
-        <a href="">Day 1:</a>
+        <li><a href="">Day 1:</a></li>
         
      
     </ul>
