--- a/mainPage.html
+++ b/mainPage.html
@@ -4,19 +4,17 @@
     <title>200 day project</title>
    
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-    <link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>
+    <link type="text/css" rel="stylesheet" href="http://kingpixel.github.io/Feather/dist/css/feather.min.css"/>
       
    
     </head>
     
   <body>
-   <table border="5px">
-    <tr>
-     <td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
-     <td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
-     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td>    
-  </tr>
- </table>
+ <ul>
+  <li><a href="bit.do/200daysproject">Home</a></li>
+  <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
+  <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
+ </ul>
    
    <strong><h1><em>200 days project</em></h1></strong>
    
