--- a/mainPage.html
+++ b/mainPage.html
@@ -22,7 +22,7 @@
     <em><h3>Starting from March 1, I will begin my project and make a website every day for 200 days</h3></em>
      
      <ul>
-       <li><a href="">Day 1</li>
+       <li style= color:"black"><a href="">Day 1</li>
   </body>
   
 </html>
