--- a/mainPage.html
+++ b/mainPage.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>
       </head>
     
-  <body>
+  <center><body>
    <table border="5px">
     <tr>
      <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
@@ -23,7 +23,7 @@
      
      <ul>
        <li><a href="">Day 1</a></li>
-  </body>
+  </body></center>
   
 </html>
  
