--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>200 days project</title>
-   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>
       </head>
