--- a/mainPage.html
+++ b/mainPage.html
@@ -5,6 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>
+     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
       </head>
     
   <body>
