--- a/mainPage.html
+++ b/mainPage.html
@@ -25,7 +25,8 @@
   <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
    
   <em><h3>Starting from March 1, I will begin my project and make a website every day for 200 days</h3></em>
-  <h3>If you want to know more about my websites, you can go to my <a href=""><div style="color: red">blog</div></a></h3>
+  <h3>If you want to know more about my websites, you can go to my</h3>
+  <a href=""><div style="color: red">blog</div></a>
   <em><center><h4 style="color: white; background-color: none">Some things I like are:</h4></center></em>
   <em><center><h4 style="color: white; background-color: none">coding,playing basketball, and the warriors</h4></center></em>
   <!--The code to my images-->
