--- a/mainPage.html
+++ b/mainPage.html
@@ -26,7 +26,7 @@
   <em><h3>Starting from March 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->>
   <em><h3>If you want to know more about my websites, you can go to my</h3></em>
-  <u><a href="">Blog</a></u>
+  <u><a href="" style="color: blue">Blog</a></u>
   <em><center><h4 style="color: white; background-color: none">Some things I like are:</h4></center></em>
   <em><center><h4 style="color: white; background-color: none">coding,playing basketball, and the warriors</h4></center></em>
   <!--The code to my images-->
