--- a/mainPage.html
+++ b/mainPage.html
@@ -14,9 +14,14 @@
   <!--The code to my menu bar-->
   <table border="5px">
     <tr>
-      <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
-      <td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
-      <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>     
+     <ul class="topnav">
+  <center><li><a href="bit.do/200daysproject">Home</a></li>
+  <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
+  <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
+  <li class="icon">
+    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></center>
+  </li>
+</ul>     
     </tr>
   </table>
   <!--My title-->
