--- a/mainPage.html
+++ b/mainPage.html
@@ -22,6 +22,12 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></center>
   </li>
 </ul>     
+
+<script>
+function myFunction() {
+    document.getElementsByClassName("topnav")[0].classList.toggle("responsive");
+}
+</script>
     </tr>
   </table>
   <!--My title-->
