--- a/mainPage.html
+++ b/mainPage.html
@@ -14,7 +14,7 @@
   <!--The code to my menu bar-->
   
  <ul class="topnav">
-  <center><li><a href="bit.do/200daysproject">Home</a></li>
+  <center><li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
   <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
   <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
   <li class="icon">
