--- a/mainPage.html
+++ b/mainPage.html
@@ -13,14 +13,13 @@
 <body>
   <!--The code to my menu bar-->
   
- <ul class="topnav">
-  <center><li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-  <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
-  <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
-  <li class="icon">
-    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a></center>
-  </li>
-</ul>     
+ <table border="5px">
+    <tr>
+     <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
+     <td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
+     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>     
+  </tr>
+ </table>
 
 <script>
 function myFunction() {
