--- a/mainPage.html
+++ b/mainPage.html
@@ -23,10 +23,10 @@
   <!--My title-->
   <strong><h1><em>200 days project</em></h1></strong>
    
-  <em><h3 style="color: black">Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
-  <em><h3 style="color: black">Starting from March 1, I will begin my project and make a website every day for 200 days</h3></em>
+  <em><h3 style="color: black">Hello, my name is Anshu<div>l Kashyap and coding is</div> my passion. I have been coding since I was 8 years old and <div>made many co</div>ding project since then.  </h3></em>
+  <em><h3 style="color: black">Sta<div>rting from May 1, I will begin my project and make a</div> website every day for 200 days</h3></em>
   <!--Blog link-->
-  <em><h3 style="color: black">If you want to know more about my websites, you can go to my</h3></em>
+  <em><h3 style="color: black"><div>If you want to know more about my websites,</div> you can go to my</h3></em>
   <u><a href="" style="color: blue">Blog</a></u>
   <em><center><h4 style="color: black; background-color: none">Some things I like are:</h4></center></em>
   <em><center><h4 style="color: black; background-color: none">coding,playing basketball, and the warriors</h4></center></em>
