--- a/mainPage.html
+++ b/mainPage.html
@@ -23,7 +23,7 @@
   <!--My title-->
   <strong><h1><em>200 days project</em></h1></strong>
   <div id="section">
-    <em><h3 style="color: white">Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and <div>made many co</div>ding project since then.  </h3></em>
+    <em><h3 style="color: white">Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
     <em><h3 style="color: white">Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
     <em><h3 style="color: white">If you want to know more about my websites, you can go to my</h3></em>
