--- a/mainPage.html
+++ b/mainPage.html
@@ -11,8 +11,11 @@
 </head>
     
 <body>
+  <script>
+    $(document).ready(function(){
+      $("body").fadeIn("slow");
+    });
   <!--The code to my menu bar-->
-  
  <table border="5px">
     <tr>
      <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
