--- a/mainPage.html
+++ b/mainPage.html
@@ -13,7 +13,15 @@
 <body>
   <script>
     $(document).ready(function(){
-      $("body").fadeIn("slow");
+      $("h1").hide();
+      $("img").hide();
+      $("h4").hide();
+      $("h3").hide();
+      
+      $("h1").fadeIn();
+      $("img").fadeIn();
+      $("h4").fadeIn();
+      $("h3").fadeIn();
     });
   <!--The code to my menu bar-->
  <table border="5px">
