--- a/mainPage.html
+++ b/mainPage.html
@@ -23,6 +23,8 @@
       $("h4").fadeIn();
       $("h3").fadeIn();
     });
+  
+  </script>
   <!--The code to my menu bar-->
  <table border="5px">
     <tr>
