--- a/mainPage.html
+++ b/mainPage.html
@@ -18,10 +18,10 @@
       $("h4").hide();
       $("h3").hide();
       
-      $("h1").fadeIn();
-      $("img").fadeIn();
-      $("h4").fadeIn();
-      $("h3").fadeIn();
+      $("h1").fadeIn(1000);
+      $("img").fadeIn(1000);
+      $("h4").fadeIn(1000);
+      $("h3").fadeIn(1000);
     });
   
   </script>
