--- a/mainPage.html
+++ b/mainPage.html
@@ -17,11 +17,13 @@
       $("img").hide();
       $("h4").hide();
       $("h3").hide();
+      $("table").hide();
       
-      $("h1").fadeIn(1000);
-      $("img").fadeIn(1000);
-      $("h4").fadeIn(1000);
-      $("h3").fadeIn(1000);
+      $("h1").fadeIn("slow");
+      $("img").fadeIn("slow");
+      $("h4").fadeIn("slow");
+      $("h3").fadeIn("slow");
+      $("table").fadeIn("slow");
     });
   
   </script>
