--- a/mainPage.html
+++ b/mainPage.html
@@ -19,11 +19,11 @@
       $("h3").hide();
       $("table").hide();
       
-      $("h1").fadeIn("slow");
-      $("img").fadeIn("slow");
-      $("h4").fadeIn("slow");
-      $("h3").fadeIn("slow");
-      $("table").fadeIn("slow");
+      $("h1").fadeIn(6000);
+      $("img").fadeIn(6000);
+      $("h4").fadeIn(6000);
+      $("h3").fadeIn(6000);
+      $("table").fadeIn(6000);
     });
   
   </script>
