--- a/mainPage.html
+++ b/mainPage.html
@@ -18,12 +18,14 @@
       $("h4").hide();
       $("h3").hide();
       $("table").hide();
+      $("u").hide();
       
       $("h1").fadeIn(6000);
       $("img").fadeIn(6000);
       $("h4").fadeIn(6000);
       $("h3").fadeIn(6000);
       $("table").fadeIn(6000);
+      $("u").fadeIn(6000);
     });
   
   </script>
