--- a/mainPage.html
+++ b/mainPage.html
@@ -13,21 +13,10 @@
 <body>
   <script>
     $(document).ready(function(){
-      $("h1").hide();
-      $("img").hide();
-      $("h4").hide();
-      $("h3").hide();
-      $("table").hide();
-      $("u").hide();
+      $("body").hide(3000);
       
-      $("h1").fadeIn(3000);
-      $("img").fadeIn(3000);
-      $("h4").fadeIn(3000);
-      $("h3").fadeIn(3000);
-      $("table").fadeIn(3000);
-      $("u").fadeIn(3000);
+      $("body").fadeIn(3000);
     });
-  
   </script>
   <!--The code to my menu bar-->
  <table border="5px">
