--- a/mainPage.html
+++ b/mainPage.html
@@ -13,7 +13,7 @@
 <body>
   <script>
     $(document).ready(function(){
-      $("body").hide(3000);
+      $("body").hide();
       
       $("body").fadeIn(3000);
     });
