--- a/mainPage.html
+++ b/mainPage.html
@@ -19,6 +19,20 @@
     });
   </script>
   <!--The code to my menu bar-->
+ <menu type="context" id="mymenu">
+  <menuitem label="Refresh" onclick="window.location.reload();" icon="ico_reload.png">
+  </menuitem>
+  <menu label="Share on...">
+    <menuitem label="Twitter" icon="ico_twitter.png"
+    onclick="window.open('//twitter.com/intent/tweet?text='+window.location.href);">
+    </menuitem>
+    <menuitem label="Facebook" icon="ico_facebook.png"
+    onclick="window.open('//facebook.com/sharer/sharer.php?u='+window.location.href);">
+    </menuitem>
+  </menu>
+  <menuitem label="Email This Page"
+  onclick="window.location='mailto:?body='+window.location.href;"></menuitem>
+</menu>
  <table border="5px">
     <tr>
      <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
