--- a/mainPage.html
+++ b/mainPage.html
@@ -20,18 +20,15 @@
   </script>
   <!--The code to my menu bar-->
  <menu type="context" id="mymenu">
-  <menuitem label="Refresh" onclick="window.location.reload();" icon="ico_reload.png">
+  <menuitem label="Refresh">
   </menuitem>
   <menu label="Share on...">
-    <menuitem label="Twitter" icon="ico_twitter.png"
-    onclick="window.open('//twitter.com/intent/tweet?text='+window.location.href);">
+    <menuitem label="Twitter">
     </menuitem>
-    <menuitem label="Facebook" icon="ico_facebook.png"
-    onclick="window.open('//facebook.com/sharer/sharer.php?u='+window.location.href);">
+    <menuitem label="Facebook">
     </menuitem>
   </menu>
-  <menuitem label="Email This Page"
-  onclick="window.location='mailto:?body='+window.location.href;"></menuitem>
+  <menuitem label="Email This Page"></menuitem>
 </menu>
  <table border="5px">
     <tr>
