--- a/mainPage.html
+++ b/mainPage.html
@@ -19,24 +19,12 @@
     });
   </script>
   <!--The code to my menu bar-->
- <menu type="context" id="mymenu">
-  <menuitem label="Refresh">
-  </menuitem>
-  <menu label="Share on...">
-    <menuitem label="Twitter">
-    </menuitem>
-    <menuitem label="Facebook">
-    </menuitem>
-  </menu>
-  <menuitem label="Email This Page"></menuitem>
-</menu>
- <table border="5px">
-    <tr>
-     <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
-     <td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
-     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>   
-    </tr>
-  </table>
+  <ul>
+    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+    <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
+    <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
+  </ul>
   <!--My title-->
   <strong><h1><em>200 days project</em></h1></strong>
   <div id="section">
