--- a/mainPage.html
+++ b/mainPage.html
@@ -12,9 +12,9 @@
 <body>
   <script>
     $(document).ready(function(){
-      $("body").hide();
+      $("h3").hide();
       
-      $("body").fadeIn(3000);
+      $("h3").fadeIn(3000);
     });
   </script>
   <!--The code to my menu bar-->
