--- a/mainPage.html
+++ b/mainPage.html
@@ -24,6 +24,8 @@
     <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
   </ul>
+  &nbsp;
+  &nbsp;
   <!--My title-->
   <strong><h1><em>200 days project</em></h1></strong>
   <div id="section">
