--- a/mainPage.html
+++ b/mainPage.html
@@ -9,7 +9,7 @@
     <!--My websites icon-->
     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
 </head>
-<body>
+<body background"http://cdn.pcwallart.com/images/cool-nature-desktop-backgrounds-wallpaper-1.jpg" class="opacity">
   <script>
     $(document).ready(function(){
       $("h3").hide();
