--- a/mainPage.html
+++ b/mainPage.html
@@ -19,7 +19,7 @@
   </script>
   <!--The code to my menu bar-->
   <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50" filter="brightness(50%)"></li>
+    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></li>
@@ -29,13 +29,13 @@
   <!--My title-->
   <strong><h1><em>200 days project</em></h1></strong>
   <div id="section">
-    <em><h3 style="color: white">Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
-    <em><h3 style="color: white">Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
+    <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
+    <em><h3>Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
     <em><h3 style="color: white">If you want to know more about my websites, you can go to my</h3></em>
     <u><a href="" style="color: blue">Blog</a></u>
-    <em><center><h4 style="color: white; background-color: none">Some things I like are:</h4></center></em>
-    <em><center><h4 style="color: white; background-color: none">coding,playing basketball, and the warriors</h4></center></em>
+    <em><center><h4>Some things I like are:</h4></center></em>
+    <em><center><h4>coding,playing basketball, and the warriors</h4></center></em>
   </div>
   <!--The code to my images-->
   <table border="5px"> 
