--- a/mainPage.html
+++ b/mainPage.html
@@ -32,7 +32,7 @@
     <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
     <em><h3>Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
-    <em><h3 style="color: white">If you want to know more about my websites, you can go to my</h3></em>
+    <em><h3>If you want to know more about my websites, you can go to my</h3></em>
     <u><a href="" style="color: blue">Blog</a></u>
     <em><center><h4>Some things I like are:</h4></center></em>
     <em><center><h4>coding,playing basketball, and the warriors</h4></center></em>
