--- a/mainPage.html
+++ b/mainPage.html
@@ -13,8 +13,18 @@
   <script>
     $(document).ready(function(){
       $("h3").hide();
+      $("h1").hide();
+      $("h4").hide();
+      $("ul").hide();
+      $("img").hide();
+      $("u").hide();
       
       $("h3").fadeIn(3000);
+      $("h1").fadeIn(3000);
+      $("h4").fadeIn(3000);
+      $("ul").fadeIn(3000);
+      $("img").fadeIn(3000);
+      $("u").fadeIn(3000);
     });
   </script>
   <!--The code to my menu bar-->
