--- a/mainPage.html
+++ b/mainPage.html
@@ -18,6 +18,7 @@
       $("ul").hide();
       $("img").hide();
       $("u").hide();
+      $("table").hide();
       
       $("h3").fadeIn(3000);
       $("h1").fadeIn(3000);
@@ -25,6 +26,7 @@
       $("ul").fadeIn(3000);
       $("img").fadeIn(3000);
       $("u").fadeIn(3000);
+      $("table").fadeIn(3000);
     });
   </script>
   <!--The code to my menu bar-->
