--- a/mainPage.html
+++ b/mainPage.html
@@ -5,7 +5,6 @@
     <!--The links connecting to my css and javascript/jQuery code-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-    <!--<link type="text/css" rel="stylesheet" href="http://footballcoder.github.io/YearOfCode/projects/css/frameworks/sweep.css"/>-->
     <!--My websites icon-->
     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
 </head>
@@ -45,7 +44,7 @@
     <em><h3>Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
     <em><h3>If you want to know more about my websites, you can go to my</h3></em>
-    <u><a href="" style="color: blue">Blog</a></u>
+    <center><u><a href="" style="color: blue">Blog</a></u></center>
     <em><center><h4>Some things I like are:</h4></center></em>
     <em><center><h4>coding,playing basketball, and the warriors</h4></center></em>
   </div>
