--- a/aboutPage.html
+++ b/aboutPage.html
@@ -25,6 +25,6 @@
   </tr>
  </table>
     <h1>About</h1>
-    <center><p>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from March 1, I will make a project, every day, for 200 days.</p></center>
+    <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from March 1, I will make a project, every day, for 200 days.</h3></center>
   </body>
 </html>
