--- a/aboutPage.html
+++ b/aboutPage.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
     <title>aboutPage</title>
   </head>
-  <body>
+  <body class="content">
     <!--My fade in function-->
     <script>
     $(document).ready(function(){
