--- a/aboutPage.html
+++ b/aboutPage.html
@@ -17,13 +17,14 @@
     });
   </script>
   <!--My menu bar-->
-  <table border="5px">
-    <tr>
-     <center><td><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></td>
-     <td><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></td>
-     <td><a href="http://ak-basketball.github.io/aboutPage/mainPage.html">About</a></td></center>     
-  </tr>
- </table>
+  <ul>
+    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+    <li><a href="http://ak-basketball.github.io/resourcePage/mainPage.html">Resources</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+  </ul>
+  &nbsp;
+  &nbsp;
     <h1>About</h1>
     <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from March 1, I will make a project, every day, for 200 days.</h3></center>
   </body>
