--- a/mainPage.html
+++ b/mainPage.html
@@ -18,6 +18,7 @@
       $("img").hide();
       $("u").hide();
       $("table").hide();
+      $("a").hide();
       
       $("h3").fadeIn(3000);
       $("h1").fadeIn(3000);
@@ -26,6 +27,7 @@
       $("img").fadeIn(3000);
       $("u").fadeIn(3000);
       $("table").fadeIn(3000);
+       $("a").fadeIn(3000);
     });
   </script>
   <!--The code to my menu bar-->
@@ -56,7 +58,5 @@
   </table>
   <!--My projects-->
   &nbsp;
-</body>
-  
+ </body>
 </html>
- 
