--- a/aboutPage.html
+++ b/aboutPage.html
@@ -11,9 +11,15 @@
     <!--My fade in function-->
     <script>
     $(document).ready(function(){
-      $("body").hide();
+      $("ul").hide();
+      $("img").hide();
+      $("h1").hide();
+      $("h3").hide();
       
-      $("body").fadeIn(3000);
+      $("ul").fadeIn(3000);
+      $("img").fadeIn(3000);
+      $("h1").fadeIn(3000);
+      $("h3").fadeIn(3000);
     });
   </script>
   <!--My menu bar-->
