--- a/resourcePage.html
+++ b/resourcePage.html
@@ -30,7 +30,7 @@
   &nbsp;
   &nbsp;
     <h1>Resources</h1>
-    <center><p>I use many resoures that help me while coding. To test my creation, I use <font size="25px"><a href="http://codepen.io/">Codepen</a></font> I also use <font size="25px"><a href="http://stackoverflow.com/">StackOverFlow</a></font> to find the answers to my questions. To publish my websites I use <font size="25px"><a href="https://github.com/">github.</a></font> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></p></center>
+    <center><h3>I use many resoures that help me while coding. To test my creation, I use <font size="25px"><a href="http://codepen.io/">Codepen</a></font> I also use <font size="25px"><a href="http://stackoverflow.com/">StackOverFlow</a></font> to find the answers to my questions. To publish my websites I use <font size="25px"><a href="https://github.com/">github.</a></font> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
   
   </body>
 </html>
