--- a/mainPage.html
+++ b/mainPage.html
@@ -37,6 +37,7 @@
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+    <li><a href="">Blog</a></li>
   </ul>
   &nbsp;
   &nbsp;
