--- a/mainPage.html
+++ b/mainPage.html
@@ -32,7 +32,7 @@
   </script>
   <!--The code to my menu bar-->
   <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50" align="middle" style="position: absolute;"></li>
+    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50" align="middle"></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
