--- a/mainPage.html
+++ b/mainPage.html
@@ -33,9 +33,9 @@
   <!--The code to my menu bar-->
   <ul>
     <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50" align="middle"></li>
-    <li><u><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></u></li>
-    <li><u><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></u></li>
-    <li><u><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></u></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
     <li><a href="">Blog</a></li>
   </ul>
   &nbsp;
