--- a/resourcePage.html
+++ b/resourcePage.html
@@ -4,11 +4,11 @@
     <!--My icon-->
     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
     <title>Resources</title>
-    </head>
+  </head>
   <body class="content">
     <!--My fadeIn code-->
-   <script>
-    $(document).ready(function(){
+    <script>
+      $(document).ready(function(){
       $("table").hide();
       $("h1").hide();
       $("p").hide();
@@ -18,19 +18,18 @@
       $("p").fadeIn(3000);
       $("h1").fadeIn(3000);
       $("a").fadeIn(3000);
-    });
-  </script>
+      });
+    </script>
     <!--My menu bar-->
-   <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-  </ul>
-  &nbsp;
-  &nbsp;
+    <ul>
+      <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+      <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+      <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+      <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+    </ul>
+&nbsp;
+&nbsp;
     <h1>Resources</h1>
-    <center><h3>I use many resoures that help me while coding. To test my creation, I use <font size="25px"><a href="http://codepen.io/">Codepen</a></font> I also use <font size="25px"><a href="http://stackoverflow.com/">StackOverFlow</a></font> to find the answers to my questions. To publish my websites I use <font size="25px"><a href="https://github.com/">github.</a></font> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
-  
+    <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/">Codepen</a>< I also use <a href="http://stackoverflow.com/">StackOverFlow</a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/">github.</a> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
   </body>
 </html>
