--- a/mainPage.html
+++ b/mainPage.html
@@ -32,7 +32,7 @@
   </script>
   <!--The code to my menu bar-->
   <ul>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+    <li><a class="active" href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">About</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
