--- a/mainPage.html
+++ b/mainPage.html
@@ -39,6 +39,8 @@
   </ul>
   &nbsp;
   &nbsp;
+  &nbsp;
+  &nbsp;
   <!--My title-->
   <center><strong><h1><em>200 days project</em></h1></strong></center>
   <div id="section">
