--- a/mainPage.html
+++ b/mainPage.html
@@ -48,7 +48,7 @@
     <em><h3>Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
     <em><h3>If you want to know more about my websites, you can go to my</h3></em>
-    <center><u><a href="">Blog</a></u></center>
+    <center><u style="font-size: 25px;"><a href="">Blog</a></u></center>
     <em><center><h4>Some things I like are:</h4></center></em>
   </div>
   <!--The code to my images-->
