--- a/aboutPage.html
+++ b/aboutPage.html
@@ -24,10 +24,12 @@
   </script>
   <!--My menu bar-->
   <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+    <ul>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+    <li><a class="active" href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/Page.html">Blog</a></li>
+  </ul>
   </ul>
   &nbsp;
   &nbsp;
