--- a/mainPage.html
+++ b/mainPage.html
@@ -33,8 +33,8 @@
   <!--The code to my menu bar-->
   <ul>
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Resources</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">About</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
   </ul>
   &nbsp;
