--- a/aboutPage.html
+++ b/aboutPage.html
@@ -11,15 +11,23 @@
     <!--My fade in function-->
   <script>
     $(document).ready(function(){
+      $("h3").hide();
+      $("h1").hide();
+      $("h4").hide();
       $("ul").hide();
       $("img").hide();
-      $("h1").hide();
-      $("h3").hide();
+      $("u").hide();
+      $("table").hide();
+      $("a").hide();
       
+      $("h3").fadeIn(3000);
+      $("h1").fadeIn(3000);
+      $("h4").fadeIn(3000);
       $("ul").fadeIn(3000);
       $("img").fadeIn(3000);
-      $("h1").fadeIn(3000);
-      $("h3").fadeIn(3000);
+      $("u").fadeIn(3000);
+      $("table").fadeIn(3000);
+      $("a").fadeIn(3000);
     });
   </script>
   <!--My menu bar-->
