--- a/mainPage.html
+++ b/mainPage.html
@@ -31,6 +31,7 @@
     });
   </script>
   <!--The code to my menu bar-->
+<div>  
   <ul>
     <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50">
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
@@ -38,13 +39,14 @@
     <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
   </ul>
+</div>
   &nbsp;
   &nbsp;
   &nbsp;
   &nbsp;
   <!--My title-->
-  <!--<center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>-->
-  <div id="section">
+ <div>
+  <center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>
     <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
     <em><h3>Starting from May 1, I will begin my project and make a website every day for 200 days</h3></em>
   <!--Blog link-->
@@ -52,6 +54,7 @@
     <center><u style="font-size: 25px; color: black"><a href="">Blog</a></u></center>
     <em><center><h4>Some things I like are:</h4></center></em>
   </div>
+
   <!--The code to my images-->
   <center><table border="5px"> 
    <center><tr>
