--- a/mainPage.html
+++ b/mainPage.html
@@ -33,7 +33,7 @@
   <!--The code to my menu bar-->
 <div>  
   <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50">
+    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
