--- a/mainPage.html
+++ b/mainPage.html
@@ -40,6 +40,7 @@
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
   </ul>
 </div>
+<h3> This is temp code</h3>
   <!--My title-->
  <div>
   <center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>
