--- a/mainPage.html
+++ b/mainPage.html
@@ -40,7 +40,8 @@
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
   </ul>
 </div>
-<h3> This is temp code</h3>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   <!--My title-->
  <div>
   <center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>
@@ -51,7 +52,8 @@
     <center><u style="font-size: 25px; color: black"><a href="">Blog</a></u></center>
     <em><center><h4>Some things I like are:</h4></center></em>
   </div>
-
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   <!--The code to my images-->
 <div>
   <center><table border="5px"> 
