--- a/resourcePage.html
+++ b/resourcePage.html
@@ -31,6 +31,6 @@
 &nbsp;
 &nbsp;
     <h1>Resources</h1>
-    <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/">Codepen</a>< I also use <a href="http://stackoverflow.com/">StackOverFlow</a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/">github.</a> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
+    <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/">Codepen</a> I also use <a href="http://stackoverflow.com/">StackOverFlow</a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/">github.</a> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
   </body>
 </html>
