--- a/resourcePage.html
+++ b/resourcePage.html
@@ -21,16 +21,18 @@
       });
     </script>
     <!--My menu bar-->
-    <ul>
+  <div>
+  <ul>
     <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50">
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Blog</a></li>
   </ul>
-&nbsp;
-&nbsp;
-    <h1>Resources</h1>
+  </div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+    <h1 style="font-family: Comic Sans MS">Resources</h1>
     <center><h3>I use many resoures that help me while coding. To test my creation, I use <a style="color: red" href="http://codepen.io/">Codepen</a> I also use <a style="color: red" href="http://stackoverflow.com/">StackOverFlow</a> to find the answers to my questions. To publish my websites I use <a style="color: red" href="https://github.com/">github.</a> You can check out my latest creations on Codepen by following me using my username,  <strong>Ak-basketball</strong></h3></center>
   </body>
 </html>
