--- a/mainPage.html
+++ b/mainPage.html
@@ -59,7 +59,9 @@
   <center><table border="5px"> 
    <tr>
     <center><td><h4>Coding</h4></td></center>
+    &nbsp;
     <center><td><h4>Playing basketball</h4></td></center>
+    &nbsp;
     <center><td><h4>The warriors</h4></td></center>
    </tr>
    <tr>
