--- a/resourcePage.html
+++ b/resourcePage.html
@@ -33,6 +33,6 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
     <h1 style="font-family: Comic Sans MS">Resources</h1>
-    <center><h3>I use many resoures that help me while coding. To test my creation, I use <span><a href="http://codepen.io/">Codepen</a></span> I also use <span><a href="http://stackoverflow.com/">StackOverFlow</a></span> to find the answers to my questions. To publish my websites I use <span><a href="https://github.com/">github.</a></span> You can check out my latest creations on Codepen by following me using my username,  <strong><font style="color: yellow">Ak-basketball.</font></strong></h3></center>
+    <center><h3>I use many resoures that help me while coding. To test my creation, I use <a href="http://codepen.io/"><span>Codepen</span></a> I also use <a href="http://stackoverflow.com/"><span>StackOverFlow</span></a> to find the answers to my questions. To publish my websites I use <a href="https://github.com/"><span>github.</span></a> You can check out my latest creations on Codepen by following me using my username,  <strong><font style="color: yellow">Ak-basketball.</font></strong></h3></center>
   </body>
 </html>
