--- a/aboutPage.html
+++ b/aboutPage.html
@@ -31,20 +31,17 @@
     });
   </script>
   <!--My menu bar-->
+ <div>
   <ul>
     <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/Page.html">Blog</a></li>
-
   </ul>
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  &nbsp;
+ </div>
+ <p>&nbsp;</p>
+ <p>&nbsp;</p>
     <h1 style="font-family: Comic Sans MS">About</h1>
     <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from March 1, I will make a project, every day, for 200 days.</h3></center>
   </body>
