--- a/mainPage.html
+++ b/mainPage.html
@@ -54,7 +54,7 @@
   </div>
   <!--The code to my images-->
 <div>
-  <center><table> 
+  <center><table
    <tr>
     <center><td><h4>Coding</h4></td></center>
     <center><td><h4>Playing basketball</h4></td></center>
