--- a/mainPage.html
+++ b/mainPage.html
@@ -54,9 +54,9 @@
   </div>
   <!--The code to my images-->
 <div>
-  <center><table>
+  <center><table border="1px solid black">
    <tr>
-    <td align="center"><h4>Coding</h4></td></center>
+    <td align="center"><h4>Coding</h4></td>
     <td align="center"><h4>Playing basketball</h4></td>
     <td align="center"><h4>The warriors</h4></td>
    </tr>
