--- a/mainPage.html
+++ b/mainPage.html
@@ -54,7 +54,7 @@
   </div>
   <!--The code to my images-->
 <div>
-  <center><table>
+  <center><table border="1px solid blue, yellow, green">
    <tr>
     <td align="center"><h4>Coding</h4></td>
     <td align="center"><h4>Playing basketball</h4></td>
