--- a/aboutPage.html
+++ b/aboutPage.html
@@ -3,6 +3,7 @@
   <head>
     <!--My css code-->
     <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <!--My icon-->
     <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
     <title>aboutPage</title>
