--- a/blogPage.html
+++ b/blogPage.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!--My icon-->
     <title>Blog</title>
   </head>
   <body class="content">
