--- a/resourcePage.html
+++ b/resourcePage.html
@@ -14,11 +14,15 @@
       $("h1").hide();
       $("p").hide();
       $("a").hide();
+      $("ul").hide();
+      $("li").hide();
       
       $("table").fadeIn(3000);
       $("p").fadeIn(3000);
       $("h1").fadeIn(3000);
       $("a").fadeIn(3000);
+      $("ul").fadeIn(3000);
+      $("li").fadeIn(3000);
       });
     </script>
     <!--My menu bar-->
