--- a/resourcePage.html
+++ b/resourcePage.html
@@ -16,6 +16,7 @@
       $("a").hide();
       $("ul").hide();
       $("li").hide();
+      $("img").hide();
       
       $("table").fadeIn(3000);
       $("p").fadeIn(3000);
@@ -23,6 +24,7 @@
       $("a").fadeIn(3000);
       $("ul").fadeIn(3000);
       $("li").fadeIn(3000);
+      $("img").fadeIn(3000);
       });
     </script>
     <!--My menu bar-->
