--- a/blogPage.html
+++ b/blogPage.html
@@ -30,7 +30,9 @@
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
   </ul>
  </div>
-   <div>
+ <p>&nbsp;</p>
+ <p>&nbsp;</p>
+ <div>
     <h1>My Blog where I'll tell you about my websites and projects</h1>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
