--- a/blogPage.html
+++ b/blogPage.html
@@ -33,7 +33,8 @@
  <p>&nbsp;</p>
  <p>&nbsp;</p>
  <div>
-    <h1>My Blog where I'll tell you about my websites and projects</h1>
+    <h1 style="font-family: Comic Sans MS">Blog</h1>
+    <p style="font-family: Comic Sans MS">where I'll tell you about my websites and projects</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <div class="sect1">
