--- a/blogPage.html
+++ b/blogPage.html
@@ -34,7 +34,7 @@
  <p>&nbsp;</p>
  <div>
     <h1 style="font-family: Comic Sans MS">Blog</h1>
-    <p style="font-family: Comic Sans MS">where I'll tell you about my websites and projects</p>
+    <p style="font-family: Comic Sans MS; font-size: 25px">where I'll tell you about my websites and projects</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <div class="sect1">
