--- a/blogPage.html
+++ b/blogPage.html
@@ -33,8 +33,8 @@
  <p>&nbsp;</p>
  <p>&nbsp;</p>
  <div>
-    <h1 style="font-family: Comic Sans MS">Blog</h1>
-    <p style="font-family: Comic Sans MS; font-size: 25px">where I'll tell you about my websites and projects</p>
+    <em><h1 style="font-family: Comic Sans MS">Blog</h1></em>
+    <em><p style="font-family: Comic Sans MS; font-size: 25px">where I'll tell you about my websites and projects</p></em>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <div class="sect1">
