--- a/blogPage.html
+++ b/blogPage.html
@@ -38,7 +38,7 @@
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <div class="sect1">
-      <ul>
+      <ul class="blogli">
         <li><a href="">Day 1:</a></li>
       </ul>
     </div>
