--- a/resourcePage.html
+++ b/resourcePage.html
@@ -10,21 +10,9 @@
     <!--My fadeIn code-->
     <script>
       $(document).ready(function(){
-      $("table").hide();
-      $("h1").hide();
-      $("p").hide();
-      $("a").hide();
-      $("ul").hide();
-      $("li").hide();
-      $("img").hide();
+      $("body").hide();
       
-      $("table").fadeIn(3000);
-      $("p").fadeIn(3000);
-      $("h1").fadeIn(3000);
-      $("a").fadeIn(3000);
-      $("ul").fadeIn(3000);
-      $("li").fadeIn(3000);
-      $("img").fadeIn(3000);
+      $("body").fadeIn(3000);
       });
     </script>
     <!--My menu bar-->
