--- a/aboutPage.html
+++ b/aboutPage.html
@@ -36,7 +36,7 @@
     <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
     <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
     <li><a class="active" href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/Page.html">Blog</a></li>
+    <li><a href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
   </ul>
  </div>
  <p>&nbsp;</p>
