--- a/resourcePage.html
+++ b/resourcePage.html
@@ -10,9 +10,21 @@
     <!--My fadeIn code-->
     <script>
       $(document).ready(function(){
-      $("body").hide();
+      $("span").hide();
+      $("h1").hide();
+      $("h3").hide()
+      $("li").hide();
+      $("ul").hide();
+      $("img").hide();
+      $("a").hide();
       
-      $("body").fadeIn(3000);
+      $("span").fadeIn(3000);
+      $("h1").fadeIn(3000);
+      $("h3").fadeIn(3000)
+      $("li").fadeIn(3000);
+      $("ul").fadeIn(3000);
+      $("img").fadeIn(3000);
+      $("a").fadeIn(3000);
       });
     </script>
     <!--My menu bar-->
