--- a/aboutPage.html
+++ b/aboutPage.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!--My css code-->
-    <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <!--My icon-->
-    <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
-    <title>aboutPage</title>
-  </head>
-  <body class="content">
-    <!--My fade in function-->
-  <script>
-    $(document).ready(function(){
-      $("h3").hide();
-      $("h1").hide();
-      $("h4").hide();
-      $("ul").hide();
-      $("img").hide();
-      $("u").hide();
-      $("a").hide();
+    <html>
+        <head>
+<!--My css code
+=========================-->
+            <link type="text/css"  rel="stylesheet" href="stylesheet.css"/>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!--My icon
+=========================-->
+            <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
+            <title>aboutPage</title>
+        </head>
+        <body class="content">
+<!--My fade in function
+=========================-->
+            <script>
+                $(document).ready(function(){
+                    $("h3").hide();
+                    $("h1").hide();
+                    $("h4").hide();
+                    $("ul").hide();
+                    $("img").hide();
+                    $("u").hide();
+                    $("a").hide();
       
-      $("h3").fadeIn(3000);
-      $("h1").fadeIn(3000);
-      $("h4").fadeIn(3000);
-      $("ul").fadeIn(3000);
-      $("img").fadeIn(3000);
-      $("u").fadeIn(3000);
-      $("a").fadeIn(3000);
-    });
-  </script>
-  <!--My menu bar-->
- <div>
-  <ul>
-    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-    <li><a class="active" href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-    <li><a href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
-  </ul>
- </div>
- <p>&nbsp;</p>
- <p>&nbsp;</p>
-    <h1 style="font-family: Comic Sans MS">About</h1>
-    <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from May 11, I will make a project, every day, for 200 days.</h3></center>
-  </body>
-</html>
+                    $("h3").fadeIn(3000);
+                    $("h1").fadeIn(3000);
+                    $("h4").fadeIn(3000);
+                    $("ul").fadeIn(3000);
+                    $("img").fadeIn(3000);
+                    $("u").fadeIn(3000);
+                    $("a").fadeIn(3000);
+                });
+            </script>
+<!--My menu bar
+==========================-->
+            <div>
+                <ul>
+                    <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+                    <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+                    <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+                    <li><a class="active" href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+                    <li><a href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
+                </ul>
+            </div>
+<!--Spaces
+==========================-->
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+<!--My main paragraph
+==========================-->
+            <h1 style="font-family: Comic Sans MS">About</h1>
+            <center><h3>My name is Anshul Kashyap, and I am a endeavoring, website developer. My passion is to code and I hope that I make many projects in the future. Starting from May 11, I will make a project, every day, for 200 days.</h3></center>
+        </body>
+    </html>
