--- a/mainPage.html
+++ b/mainPage.html
@@ -16,7 +16,8 @@
 ======================================-->
                 <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
       </head>
-      
+  
+  <div class="side-bar">
       <body class="content">
                     <!--My jQuery code
 ======================================-->
@@ -109,4 +110,6 @@
           </div>
       
       </body>
-  </html>
+   </div>
+
+</html>
