--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
       
      <html>
          
-          <div> 
+          <div class="header"> 
              <head>
                           <!--My Title
 ======================================-->
@@ -18,7 +18,7 @@
                 <link rel="shortcut icon" href="https://images6.alphacoders.com/316/316963.jpg" />
       </head>
   </div>
-  <div>
+  <div class="body">
       <body class="content">
                     <!--My jQuery code
 ======================================-->
