--- a/mainPage.html
+++ b/mainPage.html
@@ -23,6 +23,15 @@
           <script>
               
               $(document).ready(function(){
+                 $("h3").hide();
+                  $("h1").hide();
+                  $("h4").hide();
+                  $("ul").hide();
+                  $("img").hide();
+                  $("u").hide();
+                  $("table").hide();
+                  $("a").hide();
+                  
                   $("h3").fadeIn(1000);
                   $("h1").fadeIn(1000);
                   $("h4").fadeIn(1000);
