--- a/mainPage.html
+++ b/mainPage.html
@@ -62,7 +62,10 @@
             </div>
        
         </nav>
-                              
+        <!--Apaces
+========================================-->    
+                  <p>&nbsp;</p>
+                  <p>&nbsp;</p>
                             <!--My title
 ========================================-->
           <div>
