--- a/mainPage.html
+++ b/mainPage.html
@@ -70,7 +70,7 @@
 ========================================-->
           <div>
               
-              <center><strong><h1 style="font-family: Comic Sans MS">200 days project</h1></strong></center>
+              <center><strong><h1 style="font-family: Comic Sans MS; margin-top: 700px">200 days project</h1></strong></center>
               <em><h3>Hello, my name is Anshul Kashyap and coding is my passion. I have been coding since I was 8 years old and made many coding project since then.  </h3></em>
               <em><h3>Starting from May 11, I will begin my project and make a website every day for 200 days</h3></em>
               <!--Blog link-->
