--- a/mainPage.html
+++ b/mainPage.html
@@ -82,7 +82,7 @@
           <div class="section">
               
               <ul>
-                  <li><a href="">Day 1: </a></li>
+                  <li><a href="http://ak-basketball.github.io/projects/day1.html">Day 1: Control</a></li>
               </ul>
           </div>
       
