--- a/mainPage.html
+++ b/mainPage.html
@@ -82,7 +82,7 @@
           <div class="section">
              
               
-              <ul>
+              <ul style="display: inline">
                   <li><a href="http://ak-basketball.github.io/projects/day1.html">Day 1: Control</a></li>
                   <li><a href="">Day 2: Animation</a></li>
               </ul>
