--- a/blogPage.html
+++ b/blogPage.html
@@ -31,11 +31,11 @@
 =================================-->
         <div>
             <ul>
-                <li><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
-                <li><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
-                <li><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
-                <li><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
-                <li><a class="active" href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
+                <li style="display: inline"><img src="https://images6.alphacoders.com/316/316963.jpg" width="60" height="50"></li>
+                <li style="display: inline"><a href="http://ak-basketball.github.io/MainPage/mainPage.html">Home</a></li>
+                <li style="display: inline"><a href="http://ak-basketball.github.io/MainPage/resourcePage.html">Resources</a></li>
+                <li style="display: inline"><a href="http://ak-basketball.github.io/MainPage/aboutPage.html">About</a></li>
+                <li style="display: inline"><a class="active" href="http://ak-basketball.github.io/MainPage/blogPage.html">Blog</a></li>
             </ul>
         </div>
         <!--Spacers
