--- a/mainPage.html
+++ b/mainPage.html
@@ -81,7 +81,7 @@
 
           <div class="projList">
              
-                  <a href="http://ak-basketball.github.io/projects/day1.html">Day 1: Control</a>
+                  <a class="coBlack" href="http://ak-basketball.github.io/projects/day1.html">Day 1: Control</a>
                   <br>
                   <a href="">Day 2: Animation</a>
              
